Make SDMXVTLWorkflow Java8 compatible